# libPointLocation

./: .geom.h.swp  .gitignore  .gitmodules  BoundingTrap.cpp  BoundingTrap.h  CMakeCache.txt  CMakeLists.txt  Cut.cpp  Cut.h  DestructionCuts.h  Makefile  Node.h  Point_2D.cpp  Point_2D.h  Point_2D.hpp  Point_S2ratss.cpp  Point_S2ratss.h  Point_S2ratss.hpp  README.md  RS_TSD.cpp  RS_TSD.h  Segment.cpp  Segment.h  Segment.hpp  TSD.cpp  TSD.h  V_Cut.h  geom.cpp  geom.h  io.cpp  io.h  leaves_only.gp  main  main.cpp  osm_table.py  plot_everything.gp  plotting_script.py  profiler_output.txt  run_experiments.cpp  run_experiments.py  (+2 more)
TSD_algorithms/: merge.cpp  partition.cpp  v_merge.cpp  v_partition.cpp
benchmarks/: CMakeLists.txt  cgal-2d-arr-intersect-batch.cpp
experiments/: experiments.h  query_segs.h  r_tree.h  vertical_query_exp.h  vertical_query_exp_2.h
experiments/scripts/: exp_1.py  exp_2.py
persist_range/: README.md  persist1D.h  ptree.c.patch  ptree.h.patch
search/: covering_leaves.cpp  left_endpoint_leaf.cpp  naive_intersection_query.cpp
segment_ds/: AbstractNode.h  ElmInt.cpp  ElmInt.h  FirstLayerNode.h  LeafDataAVL.cpp  LeafDataAVL.h  SecondLayerNode.h  Segment.h  SegmentDS.cpp  SegmentDS.h  readme.MD
test/: CMakeLists.txt  Makefile  bounding_trap_tests.cpp  cut_tests.cpp  geomS2_tests.cpp  geom_tests.cpp  tsd_tests.cpp
vertical_query_exp_results/: plotting_script.py
